          third parties. License information can be found in LICENSE.txt which
          can be accessed via the License link in the vsix installer.

---------------------------------------------------------------------------

Key to symbols used in change notes below.

          * -- requires new P4VS
         ** -- requires new p4d server program


--------------------------------------------------------------------------
New Functionality in 2023.2 (2023.2/2562238) (2024/02/26)

        (Job #119180) * 
            Rebuilt with the latest p4api.net API.

--------------------------------------------------------------------------

New Functionality in 2023.1 Patch 5 (2023.1/2551959) (2024/02/07)

        (Job #119182) *
            Rebuilt with the latest p4api.net API.
			
--------------------------------------------------------------------------

New Functionality in 2023.1 Patch 4 (2023.1/2513916) (2023/11/03)
        #2513043 (Job #112720 #114096) *
            In ‘Helix Core - Data Retrieval’ tab in the 'Source Control'
			preferences settings, overlapping of row ‘Maximum number of
			files to cache in one run’ is fixed. All rows and controls 
			behave correctly on resizing the Data Retrieval options window.
			
--------------------------------------------------------------------------

New Functionality in 2023.1 Patch 3 (2023.1/2493210) (2023/09/25)

        #2493034, #2493068 (Job #117444) *
            During solution/project load, Visual Studio queries for the icons 
            of the files. And the icons are decided based upon whether the 
            respective file is included in any of the project or not. This 
            patch improvises the algorithm behind this to improve P4VS solution 
            load performance.

--------------------------------------------------------------------------

Bugs fixed in 2023.1 Patch 2 (2023.1/2482839) (2023/08/31)

        #2482139, 2482140 (Job #117130) *